Adding new view for single resort data

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -1,6 +1,6 @@
 @(snapshotArray: Array[ResortSnapshot])
 
-@main("Welcome to Play") {
+@main("Ski Resort Dashboard") {
   <h1>Ski Resort Dashboard</h1>
   <p>
     This is a small and simple dashboard to look up current and past conditions at a couple of Colorado Ski Resorts. Currently you can look at the 
